# geodesic-wallpaper

./: CHANGELOG.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
src/: animation_engine.rs  audio_reactive.rs  color_theory.rs  colorspace.rs  composer.rs  config.rs  error.rs  export.rs  field.rs  finance_driver.rs  fractal.rs  fractal_geometry.rs  fractal_tree.rs  generative_art.rs  geodesic.rs  interactive.rs  islamic_patterns.rs  lib.rs  lissajous.rs  lod.rs  main.rs  mandelbrot.rs  morph.rs  multi_monitor.rs  noise.rs  origami.rs  pathfinding_art.rs  penrose.rs  quilts.rs  reaction_diffusion_v2.rs  recorder.rs  scene_presets.rs  stereographic.rs  terrain.rs  texture_synthesizer.rs  tiling.rs  torus_mapping.rs  trail.rs  tray.rs  voronoi_art.rs  (+1 more)
src/renderer/: camera.rs  mod.rs
src/surface/: catenoid.rs  enneper.rs  helicoid.rs  hyperboloid.rs  mod.rs  pseudosphere.rs  saddle.rs  sphere.rs  torus.rs  trefoil.rs
tests/: config_tests.rs  geodesic_tests.rs  integration_tests.rs  property_tests.rs  surface_tests.rs  trail_tests.rs
