[package]
name = "geodesic-wallpaper"
version = "1.2.2"
edition = "2021"
rust-version = "1.75"
description = "Real-time geodesic flow live desktop wallpaper for Windows, powered by wgpu and RK4 integration on analytic Riemannian surfaces."
license = "MIT"
repository = "https://github.com/Mattbusel/geodesic-wallpaper"
homepage = "https://github.com/Mattbusel/geodesic-wallpaper"
readme = "README.md"
keywords = ["wallpaper", "geodesic", "wgpu", "windows", "riemannian"]
categories = ["graphics", "visualization", "rendering"]
exclude = [".github/", "*.png", "*.gif"]

[package.metadata]
msrv = "1.75.0"
platform = "windows"

[lib]
name = "geodesic_wallpaper"
path = "src/lib.rs"

[[bin]]
name = "geodesic-wallpaper"
path = "src/main.rs"

[dependencies]
wgpu = "22"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "6"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
raw-window-handle = "0.6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
rand = { version = "0.8", features = ["std", "std_rng"] }
proptest = "1"


[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
